# kalan

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: cmake-multi-platform.yml
sources/: Editor.hpp  Player.cpp  Player.hpp  engine.hpp  main.cpp
sources/rendering/: Lighting.cpp  Lighting.hpp  PBRMaterial.cpp  PBRMaterial.hpp
sources/resources/: AssetManager.cpp  AssetManager.hpp  ParallelLoader.cpp  ParallelLoader.hpp
